@@ -23,6 +23,9 @@ Lib/
   - Removed non-existent 'AttrTypeandValueLDIF' from ldif.__all__
 * New mix-in class ldap.controls.openldap.SearchNoOpMixIn
   adds convience method noop_search_st() to LDAPObject class
+* Added new experimental modules which implement the control classes
+  for Virtual List View (see draft-ietf-ldapext-ldapv3-vlv) and
+  Server-side Sorting (see RFC 2891) (thanks to Benjamin Dauvergne)
 
 ----------------------------------------------------------------
 Released 2.4.19 2015-01-10
@@ -1170,4 +1173,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.346 2015/06/22 11:51:07 stroeder Exp $
+$Id: CHANGES,v 1.347 2015/06/22 16:47:08 stroeder Exp $
